clusters/production/identityapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityapi
  template:
    metadata:
      labels:
        app: identityapi
      annotations:
        fluxcd.io/automated: "true"
    spec:
      containers:
      - name: identityapi
        image: identityapi:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          intialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
