clusters/production/identityapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityapi
  namespace: production
spec:
  type: NodePort
  selector:
    app: identityapi
  ports:
  - port: 80
    targetPort: 8081
