clusters/production/identityapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityapi-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: identityapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identityapi
            port:
              number: 80
